--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active"><a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a></li>
-                    <li class="nav-item"><a class="nav-link" href="#test2">Link</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#section1">Link</a></li>
                     <li class="nav-item"><a class="nav-link disabled" href="#">Disabled</a></li>
                 </ul>
             </div>
@@ -16,7 +16,7 @@
 </header>
 
 <!-- Demo content-->
-<section class="py-5 section-1" >
+<section class="py-5 section-1" id="section1">
     <div class="container py-5 text-center">
         <div class="row">
             <div class="col-lg-8 mx-auto">
