--- a/index.html
+++ b/index.html
@@ -1,28 +1,106 @@
+<<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>e-Counselling KVSA</title>
+    <style type="text/css">
+        .section-1 {
+            background: #f5f5f5;
+        }
+
+        .section-2 {
+            background: #F1F1F1;
+        }
+
+    </style>
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+</head>
+<body>
+
 <!-- Sticky navbar-->
 <header class="header sticky-top">
     <nav class="navbar navbar-expand-lg navbar-light bg-white py-3 shadow-sm">
-        <div class="container"><a class="navbar-brand" href="#">
-            <strong class="h6 mb-0 font-weight-bold text-uppercase">Sticky navbar</strong></a>
+        <div class="container"><a class="navbar-brand" href="#home">
+            <img src="#">
+            <strong class="h6 mb-0 font-weight-bold text-uppercase">e-Counselling KVSA</strong></a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active"><a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a></li>
-                    <li class="nav-item"><a class="nav-link" href="#section1">Link</a></li>
-                    <li class="nav-item"><a class="nav-link disabled" href="#">Disabled</a></li>
+                    <li class="nav-item active"><a class="nav-link" href="#home">Home |<span class="sr-only">(current)</span></a></li>
+                    <li class="nav-item"><a class="nav-link" href="#session">Session |</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#event">Event |</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#service">Service |</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#aboutus">About us |</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#contactus">Contact us |</a></li>
                 </ul>
             </div>
         </div>
     </nav>
 </header>
 
-<!-- Demo content-->
-<section class="py-5 section-1" id="section1">
+<!-- Home -->
+<section class="py-5 section-1" id="home">
     <div class="container py-5 text-center">
         <div class="row">
             <div class="col-lg-8 mx-auto">
-                <h2>Demo section 1</h2>
+                <h2>Home</h2>
                 <p class="text-muted lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate.</p>
             </div>
         </div>
     </div>
 </section>
+
+<!-- Event -->
+<section class="py-5 section-2" id="event">
+    <div class="container py-5 text-center">
+        <div class="row">
+            <div class="col-lg-8 mx-auto">
+                <h2>Event</h2>
+                <p class="text-muted lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate.</p>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- Service -->
+<section class="py-5 section-1" id="service">
+    <div class="container py-5 text-center">
+        <div class="row">
+            <div class="col-lg-8 mx-auto">
+                <h2>Service</h2>
+                <p class="text-muted lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate.</p>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- About Us -->
+<section class="py-5 section-2" id="aboutus">
+    <div class="container py-5 text-center">
+        <div class="row">
+            <div class="col-lg-8 mx-auto">
+                <h2>About us</h2>
+                <p class="text-muted lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate.</p>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- Contact Us -->
+<section class="py-5 section-1" id="contactus">
+    <div class="container py-5 text-center">
+        <div class="row">
+            <div class="col-lg-8 mx-auto">
+                <h2>Contact us</h2>
+                <p class="text-muted lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate.</p>
+            </div>
+        </div>
+    </div>
+</section>
+
+</body>
+</html>
+
