Update latest Event

--- a/index.html
+++ b/index.html
@@ -68,10 +68,44 @@
 <!-- Service -->
 <section class="py-5 section-1" id="service">
     <div class="container py-5 text-center">
+        <h2>Our Service</h2>
         <div class="row">
-            <div class="col-lg-8 mx-auto">
-                <h2>Service</h2>
-                <p class="text-muted lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate.</p>
+            <div class="col">
+                <div class="card text-white bg-primary mb-3" style="max-width: 50rem;">
+                <div class="card-header">Service</div>
+                <div class="card-body">
+                    <h5 class="card-title">Individual Counselling</h5>
+                </div>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="card text-white bg-success mb-3" style="max-width: 50rem;">
+                <div class="card-header">Service</div>
+                <div class="card-body">
+                    <h5 class="card-title">Student with Special Need Support</h5>
+                </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col">
+                <div class="card text-white bg-info mb-3" style="max-width: 50rem;">
+                <div class="card-header">Service</div>
+                <div class="card-body">
+                    <h5 class="card-title">Group Counselling</h5>
+                </div>
+                </div>
+            </div>
+        
+            <div class="col">
+                <div class="card text-white bg-danger mb-3" style="max-width: 50rem;">
+                <div class="card-header">Service</div>
+                <div class="card-body">
+                    <h5 class="card-title">Psychological  and Well-Being Consultation</h5>
+                </div>
+                </div>
             </div>
         </div>
     </div>
