--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </style>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 
@@ -43,14 +43,18 @@
 
 <!-- Home -->
 <section class="py-5 section-1" id="home">
-    <div class="container py-5 text-center">
-        <div class="row">
-            <div class="col-lg-8 mx-auto">
-                <h2>Home</h2>
-                <p class="text-muted lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate.</p>
-            </div>
-        </div>
-    </div>
+    <div class="container py-5">
+       <div class="hero">
+           <div class="hero-text">
+               <div class="hero-h2"><h2>Happiness Is A Journey,<br>Not A Destination</h2></div>
+                    <div class="vertical"></div> <div class="hero-p"><p>Making The World a better place all</p></div>
+                    <div class="button-home">
+                       <button class="get-started">Get Started</button>
+                       <button class="learn-more">Learn More</button>
+                   </div>
+           </div>
+           <div class="hero-img"><img src="img\hero-img.png" width="634px" height="100%"></div>
+       </div>
 </section>
 
 <!-- Event -->
