--- a/index.html
+++ b/index.html
@@ -117,11 +117,15 @@
 
 <!-- About Us -->
 <section class="py-5 section-2" id="aboutus">
-    <div class="container py-5 text-center">
+    <div class="container py-5">
         <div class="row">
-            <div class="col-lg-8 mx-auto">
+            <div class="col-md-6">
                 <h2>About us</h2>
-                <p class="text-muted lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate.</p>
+                <p class="text-muted">Kami menyediakan perkhidmatan kaunseling kepada pelajar - pelajar di Kolej Vokasional Shah Alam yang memerlukan bimbingan atau pertolongan.</p>
+                <p class="text-muted">Kaunseling adalah proses pertolongan yang profesional yang bertujuan bagi membantu pelajar memahami dirinya dan persekitarannya. Guru kaunseling akan cuba mendengar dan memberi layanan yang baik, serta memahami isu yang dihadapi oleh pelajar. Manakala pelajar memperihalkan isu, memahami dan mengambil tindakan mengurus isu yang dihadapi. Guru kaunseling menerima dan menghormati klien serta membina hubungan kemanusiaan yang  positif.</p>
+            </div>
+            <div class="col-md-6 how-img">
+                <img src="https://image.ibb.co/cHgKnU/Work_Section2_freelance_img2.png" class="rounded-circle img-fluid" alt=""/>
             </div>
         </div>
     </div>
