--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
         .section-2 {
             background: #F1F1F1;
         }
+        
+        .how-img 
+        {
+            text-align: center;
+        }
+        .how-img img{
+            width: 40%;
+        }
 
     </style>
 
