--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 <p class="text-muted">Kaunseling adalah proses pertolongan yang profesional yang bertujuan bagi membantu pelajar memahami dirinya dan persekitarannya. Guru kaunseling akan cuba mendengar dan memberi layanan yang baik, serta memahami isu yang dihadapi oleh pelajar. Manakala pelajar memperihalkan isu, memahami dan mengambil tindakan mengurus isu yang dihadapi. Guru kaunseling menerima dan menghormati klien serta membina hubungan kemanusiaan yang  positif.</p>
             </div>
             <div class="col-md-6 how-img">
-                <img src="https://image.ibb.co/cHgKnU/Work_Section2_freelance_img2.png" class="rounded-circle img-fluid" alt=""/>
+                <img src="css/about us.png" alt=""/>
             </div>
         </div>
     </div>
