--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
@@ -32,7 +32,7 @@
 <header class="header sticky-top">
     <nav class="navbar navbar-expand-lg navbar-light bg-white py-3 shadow-sm">
         <div class="container"><a class="navbar-brand" href="#home">
-            <img src="#">
+            <img src="img/logo.png">
             <strong class="h6 mb-0 font-weight-bold text-uppercase">e-Counselling KVSA</strong></a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -133,7 +133,7 @@
                 <p class="text-muted">Kaunseling adalah proses pertolongan yang profesional yang bertujuan bagi membantu pelajar memahami dirinya dan persekitarannya. Guru kaunseling akan cuba mendengar dan memberi layanan yang baik, serta memahami isu yang dihadapi oleh pelajar. Manakala pelajar memperihalkan isu, memahami dan mengambil tindakan mengurus isu yang dihadapi. Guru kaunseling menerima dan menghormati klien serta membina hubungan kemanusiaan yang  positif.</p>
             </div>
             <div class="col-md-6 how-img">
-                <img src="css/about us.png" alt=""/>
+                <img src="img/about us.png" alt=""/>
             </div>
         </div>
     </div>
