--- a/index.html
+++ b/index.html
@@ -125,11 +125,40 @@
 
 <!-- Service -->
 <section class="py-5 section-1" id="service">
-    <div class="container py-5 text-center">
+    
+    <div class="service">
+        <h2 style="text-align: center;">Services</h2>
         <div class="row">
-            <div class="col-lg-8 mx-auto">
-                <h2>Service</h2>
-                <p class="text-muted lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate.</p>
+            <div class="card">
+                <img src="img\individual.jpg" alt="individual Counselling" style="width:100%; height: 200px;">
+                <div class="container">
+                    <h4 class="service-h4"><b>Individual Couselling</b></h4>
+                    <p> a process through which client works one-on-one with a qualified counselor, in a safe and caring setting.</p>
+                </div>
+            </div>
+
+            <div class="card">
+                <img src="img\group-counseling.jpg" alt="group-counseling" style="width:100%; height: 200px;">
+                <div class="container">
+                    <h4 class="service-h4"><b>Group Counseling</b></h4>
+                    <p> Group counseling can be defined as counseling services or a form of psychotherapy consisting of a small group of people. </p>
+                </div>
+            </div>
+
+             <div class="card">
+                <img src="img\special.jfif" alt="individual Counselling" style="width:100%; height: 200px;">
+                <div class="container">
+                    <h4 class="service-h4"><b>Student with special need support</b></h4>
+                    <p> The concept of specific needs for educational support targets students who require special support and attention at school.</p>
+                </div>
+            </div>
+
+             <div class="card">
+                <img src="img\consultant.jfif" alt="individual Counselling" style="width:100%; height: 200px;">
+                <div class="container">
+                    <h4 class="service-h4"><b>Psychological  and Well-Being Consultation</b></h4>
+                    <p> aims to cover all areas of psychological and well-being services through personal discussions with students, parents and staff.</p>
+                </div>
             </div>
         </div>
     </div>
