--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <h2>Event</h2><br>
                 <div class="card-deck">
                     <div class="card">
-                        <img class="card-img-top" src="events 1.png" alt="">
+                        <img class="card-img-top" src="img/events 1.png" alt="">
                         <div class="card-body">
                             <h5 class="card-title">Aktiviti ceramah motivasi telah diberikan kepada pelajar.</h5>
                             <p class="card-text"><small class="text-muted">20 Jun 2022</small></p>
@@ -82,7 +82,7 @@
                     </div>
 
                     <div class="card">
-                        <img class="card-img-top" src="events 2.png" alt="">
+                        <img class="card-img-top" src="img/events 2.png" alt="">
                         <div class="card-body">
                         <h5 class="card-title">Lawatan industri ke Kilang Panasonic.</h5>
                         <p class="card-text"><small class="text-muted">28 Jun 2022</small></p>
@@ -90,7 +90,7 @@
                     </div>
 
                     <div class="card">
-                        <img class="card-img-top" src="events 3.png" alt="">
+                        <img class="card-img-top" src="img/events 3.png" alt="">
                         <div class="card-body">
                         <h5 class="card-title">Ceramah Laluan Kerjaya kepada pelajar 2 DVM Kolej Vokasional Shah Alam.</h5>
                         <p class="card-text"><small class="text-muted">6 Julai 2022</small></p>
@@ -104,7 +104,7 @@
             <div class="col-lg-8 mx-auto">
                 <div class="card-deck">
                     <div class="card">
-                        <img class="card-img-top" src="events 4.png" alt="">
+                        <img class="card-img-top" src="img/events 4.png" alt="">
                         <div class="card-body">
                             <h5 class="card-title">Ceramah tingkah laku etika di tempat kerja.</h5>
                             <p class="card-text"><small class="text-muted">9 Julai 2022</small></p>
@@ -112,7 +112,7 @@
                     </div>
 
                     <div class="card">
-                        <img class="card-img-top" src="events 5.png" alt="">
+                        <img class="card-img-top" src="img/events 5.png" alt="">
                         <div class="card-body">
                             <h5 class="card-title">Etika pemakaian pada Majlis-majlis rasmi</h5>
                             <p class="card-text"><small class="text-muted">3 Ogos 2022</small></p>
@@ -187,7 +187,22 @@
         <div class="row">
             <div class="col-lg-8 mx-auto">
                 <h2>Contact us</h2>
-                <p class="text-muted lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate.</p>
+                <br>
+                <p class="text-muted lead">
+                    <center>
+                        <table border="2" cellpadding="20" bgcolor="#c2c2a3">                      
+                        <tr>
+                            <td><h5>Location : Bilik Kaunseling Kolej Vokasional</h5></td>
+                        </tr>
+                        <tr>
+                            <td><h5>Address : Jalan Batu 3 Shah Alam 40300, Selangor</h5></td>
+                        </tr>
+                        <tr>
+                            <td><h5>No tel : 013 2345678</h5></td>
+                        </tr>
+                        </table>
+                    </center>
+                </p>
             </div>
         </div>
     </div>
