--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active"><a class="nav-link" href="#home">Home |<span class="sr-only">(current)</span></a></li>
-                    <li class="nav-item"><a class="nav-link" href="login.html">Session |</a></li>
+                    <li class="nav-item"><a class="nav-link" href="login.php">Session |</a></li>
                     <li class="nav-item"><a class="nav-link" href="#event">Event |</a></li>
                     <li class="nav-item"><a class="nav-link" href="#service">Service |</a></li>
                     <li class="nav-item"><a class="nav-link" href="#aboutus">About us |</a></li>
