--- a/register.html
+++ b/register.html
@@ -165,11 +165,12 @@
                                             <span class="input-group-text">Upload</span>
                                         </div>
                                         <div class="custom-file">
-                                            <input type="file" class="custom-file-input" id="inputGroupFile01">
-                                            <label class="custom-file-label" for="inputGroupFile01">Choose file</label>
+                                            <label class="custom-file-label" for="inputGroupFile01">Choose file</label> 
+                                            <input type="file" class="custom-file-input" id="inputGroupFile01" >
                                         </div>    
                                     </div>
-                                    <h6 class="m-0">Format : CSV</h6>
+                                    <h6 class="m-0">Format : CSV</h6><br>
+                                    <input type="submit" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm" />
                                 </div>
                             </div>
                         </div>
