--- a/jadual.html
+++ b/jadual.html
@@ -154,7 +154,7 @@
                                 <!-- Card Body -->
                                 <div class="card-body">
 
-                                    <table class="table">
+                                    <table class="table table-striped">
                                         <thead>
                                             <tr>
                                                 <th scope="col">#</th>
