--- a/kaunselor-profile.html
+++ b/kaunselor-profile.html
@@ -119,7 +119,7 @@
                             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <span class="mr-2 d-none d-lg-inline text-gray-600 small">Douglas McGee</span>
-                                <img class="img-profile rounded-circle" src="img/undraw_profile.svg">
+                                <img class="img-profile rounded-circle" src="img/profilepic.png">
                             </a>
                             <!-- Dropdown - User Information -->
                             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
@@ -162,10 +162,10 @@
                                 <div class="col-lg-4">
                                     <div class="card mb-4">
                                         <div class="card-body text-center">
-                                            <img src="# " alt="avatar"
+                                            <img src="img/profilepic.png" alt="avatar"
                                                 class="rounded-circle img-fluid" style="width: 150px;">
                                             <h5 class="my-3">Douglas McGee</h5>
-                                            <p class="text-muted mb-1">Student</p>
+                                            <p class="text-muted mb-1">Kaunselor</p>
                                         </div>
                                     </div>
                                 </div>
@@ -192,19 +192,10 @@
                                             <hr>
                                             <div class="row">
                                                 <div class="col-sm-3">
-                                                    <p class="mb-0">Phone</p>
-                                                </div>
-                                                <div class="col-sm-9">
-                                                    <p class="text-muted mb-0">(097) 234-5678</p>
-                                                </div>
-                                            </div>
-                                            <hr>
-                                            <div class="row">
-                                                <div class="col-sm-3">
                                                     <p class="mb-0">Mobile</p>
                                                 </div>
                                                 <div class="col-sm-9">
-                                                    <p class="text-muted mb-0">(098) 765-4321</p>
+                                                    <p class="text-muted mb-0">(+60)1 765-4321</p>
                                                 </div>
                                             </div>
                                             <hr>
@@ -215,6 +206,13 @@
                                                 <div class="col-sm-9">
                                                     <p class="text-muted mb-0">Bay Area, San Francisco, CA</p>
                                                 </div>
+                                            </div>
+                                            <hr>
+                                            <div class="row">
+                                                <div class="col-sm-3">
+                                                    <button class="btn btn-success">Update Profile</button>
+                                                </div>
+                                                
                                             </div>
                                         </div>
                                     </div>
