--- a/studentprofile.html
+++ b/studentprofile.html
@@ -115,7 +115,7 @@
 
     <div class="mborder">
         <h6 class="title">Farah's Profile</h6>
-        <img class="student" src="student.jpg">
+        <img class="student" src="img/student.jpg">
         <content class="info">
             <h6 class="font">Name : Farah Adilah</h6>
             <h6 class="font">Class : 2 DVM IPD</h6>
