--- a/appoiment.html
+++ b/appoiment.html
@@ -45,9 +45,10 @@
 
                 <div id="tabs">
                     <ul class="text-center">
-                        <li><a href="#tabs-1" style="width: 21.3rem;color: white;" class="btn btn-warning">UPCOMING</a></li>
-                        <li><a href="#tabs-2" style="width: 24.25rem;color: white;" class="btn btn-success">COMPLETED</a></li>
-                        <li><a href="#tabs-3" style="width: 22.3rem;color: white;" class="btn btn-danger">CANCELED</a></li>
+                        <li><a href="#tabs-1" style="width: 17rem;color: white;" class="btn btn-warning">UPCOMING</a></li>
+                        <li><a href="#tabs-2" style="width: 16.9rem;color: white;" class="btn btn-success">COMPLETED</a></li>
+                        <li><a href="#tabs-3" style="width: 16.8rem;color: white;" class="btn btn-danger">CANCELED</a></li>
+                        <li><a href="#tabs-4" style="width: 16.8rem;color: white;" class="btn btn-info">IN-PROGRESS</a></li>
                     </ul>
 
                     <!-- Tabs1 -->
@@ -130,6 +131,44 @@
                         <div class="d-sm-flex align-items-center justify-content-between mb-4">
                             <p class="p mb-0 text-gray-800 font-italic">*Permohonan anda gagal, Sila daftar permohonan baharu</p>
                         </div>
+                        </div>
+                    </div>
+
+                    <!-- Tabs4 -->
+                    <div id="tabs-4">
+                        <!-- Card Body -->
+                        <div class="card-body">
+                        
+                            <table class="table table-striped">
+                                <thead>
+                                    <tr>
+                                        <th scope="col">#</th>
+                                        <th scope="col">Nama</th>
+                                        <th scope="col">Kelas</th>
+                                        <th scope="col">Servis</th>
+                                        <th scope="col">Tarikh</th>
+                                        <th scope="col">Masa</th>
+                                        <th scope="col">Kaunselor</th>
+                                        <th scope="col">Status</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <th scope="row">1</th>
+                                        <td>Mark</td>
+                                        <td>Otto</td>
+                                        <td>@mdo</td>
+                                        <td>@mdo</td>
+                                        <td>@mdo</td>
+                                        <td>@mdo</td>
+                                        <td><button type="button" class="btn btn-danger">Rejected</button></td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        
+                            <div class="d-sm-flex align-items-center justify-content-between mb-4">
+                                <p class="p mb-0 text-gray-800 font-italic">*Permohonan anda sedang diproses.</p>
+                            </div>
                         </div>
                     </div>
                 </div>
