--- a/error.html
+++ b/error.html
@@ -14,18 +14,18 @@
 <!-- Sticky navbar-->
 <header class="header sticky-top">
     <nav class="navbar navbar-expand-lg navbar-light bg-white py-3 shadow-sm">
-        <div class="container"><a class="navbar-brand" href="#home">
-            <img src="#">
+        <div class="container"><a class="navbar-brand" href="index.php">
+            <img src="img/logo.png">
             <strong class="h6 mb-0 font-weight-bold text-uppercase">e-Counselling KVSA</strong></a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item"><a class="nav-link" href="#home">Home |</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#session">Session |</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#event">Event |</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#service">Service |</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#aboutus">About us |</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#contactus">Contact us |</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.php">Home |</a></li>
+                    <li class="nav-item"><a class="nav-link" href="login.php">Session |</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.php#event">Event |</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.php#service">Service |</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.php#aboutus">About us |</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.php#contactus">Contact us |</a></li>
                 </ul>
             </div>
         </div>
